04-EFK-Log/8. Traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kibana-ingress
  namespace: efklog
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/uat-kibana`)
      kind: Rule
      services:
        - kind: Service
          name: kibana-logging
          port: 80
      middlewares:
        - name: kibana-middleware

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: kibana-middleware
  namespace: efklog
spec:
  replacePathRegex:
    regex: ^/uat-kibana/(.*)
    replacement: /$1
